--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div style="display: flex; justify-content: center;">
     <iframe
-    src="https://embed.ipfscdn.io/ipfs/bafybeigdie2yyiazou7grjowoevmuip6akk33nqb55vrpezqdwfssrxyfy/erc1155.html?contract=0x1c8AdD9483594D7fA409F0a3AFb3f1A1e3AEd113&chain=%7B%22name%22%3A%22isodayiavail%22%2C%22chain%22%3A%22%22%2C%22rpc%22%3A%5B%22https%3A%2F%2Fevm.isodayi.com.tr%22%5D%2C%22nativeCurrency%22%3A%7B%22symbol%22%3A%22IAX%22%2C%22name%22%3A%22iax%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22isodayiavail%22%2C%22chainId%22%3A9849945%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22isodayiavail%22%2C%22icon%22%3A%7B%22url%22%3A%22ipfs%3A%2F%2FQmUGcdKdMWsNM67Z7ouNEueHB3eFKy9aX3Lx2VvSrEuZPn%2Fempty-activity.png%22%2C%22width%22%3A50%2C%22height%22%3A50%2C%22format%22%3A%22%22%7D%7D&clientId=1e18d804b25ddc1eb8402bbcc8119902&tokenId=0&theme=light&primaryColor=purple"
+    src="https://embed.ipfscdn.io/ipfs/bafybeigdie2yyiazou7grjowoevmuip6akk33nqb55vrpezqdwfssrxyfy/erc1155.html?contract=0x1c8AdD9483594D7fA409F0a3AFb3f1A1e3AEd113&chain=%7B%22name%22%3A%22isodayiavail%22%2C%22chain%22%3A%22%22%2C%22rpc%22%3A%5B%22https%3A%2F%2Fevm.isodayi.com.tr%22%5D%2C%22nativeCurrency%22%3A%7B%22symbol%22%3A%22IAX%22%2C%22name%22%3A%22iax%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22isodayiavail%22%2C%22chainId%22%3A9849945%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22isodayiavail%22%2C%22icon%22%3A%7B%22url%22%3A%22ipfs%3A%2F%2FQmUGcdKdMWsNM67Z7ouNEueHB3eFKy9aX3Lx2VvSrEuZPn%2Fempty-activity.png%22%2C%22width%22%3A50%2C%22height%22%3A50%2C%22format%22%3A%22%22%7D%7D&clientId=1e18d804b25ddc1eb8402bbcc8119902&tokenId=0&theme=light&primaryColor=red"
     width="600px"
     height="600px"
     style="max-width:100%;"
